로그인/로그아웃/아이디 저장

--- a/GoodsCommunity/src/main/resources/templates/header.html
+++ b/GoodsCommunity/src/main/resources/templates/header.html
@@ -2,10 +2,11 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:src="../static/css/header.css">
 </head>
 <body>
 <div th:fragment="header">
+    <link rel="stylesheet" href="/css/header.css">
+
     <div th:if="${session.loginUser}" class="user-info">
         <span class="user-name" th:text="${session.loginUser.memberName}"></span>
         <span class="user-role"
