--- a/GoodsCommunity/src/main/resources/templates/pages/login.html
+++ b/GoodsCommunity/src/main/resources/templates/pages/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>로그인</title>
+    <!-- css/js 파일 분리 과제 -->
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -86,6 +87,24 @@
             font-size: 14px;
             font-weight: 600;
         }
+
+        .checkbox-group {
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+        }
+        .checkbox-group input[type="checkbox"] {
+            width: 18px;
+            height: 18px;
+            margin-right: 8px;
+            cursor: pointer;
+        }
+        .checkbox-group label {
+            font-size: 14px;
+            color: #555;
+            cursor: pointer;
+            user-select: none;
+        }
     </style>
 </head>
 <body>
@@ -95,10 +114,16 @@
 
     <div th:if="${error}" class="error-message" th:text="${error}"></div>
 
-    <form action="/login" method="post">
+    <form action="/login" method="post" id="loginForm">
         <div class="form-group">
             <label for="memberEmail">이메일</label>
             <input type="email" id="memberEmail" name="memberEmail" placeholder="이메일 주소 입력" required>
+        </div>
+        <div class="checkbox-group">
+            <label>
+                <input type="checkbox" id="saveId" name="saveId" > <!-- th:value="${savedEmail}"-->
+                아이디 저장
+            </label>
         </div>
 
         <div class="form-group">
@@ -109,6 +134,6 @@
         <button type="submit" class="btn-login">로그인</button>
     </form>
 </div>
-
+<script src="/js/main.js"></script>
 </body>
 </html>
