--- a/GoodsCommunity/src/main/resources/templates/pages/myPage.html
+++ b/GoodsCommunity/src/main/resources/templates/pages/myPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="/css/header.css">
     <title>커뮤니티 - 마이페이지</title>
 
 </head>
