--- a/GoodsCommunity/src/main/resources/templates/index.html
+++ b/GoodsCommunity/src/main/resources/templates/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div th:replace="~{header :: header}"></div>
-
+    <div class="popular-board-container">
+        <h2>인기 게시글</h2>
+        <div class="popular-board-updateTime">업데이트 시간</div>
+        <div class="popular-board-list" id="pupularBoardList"></div>
+    </div>
 </body>
 </html>
